# skillguard-oss

./: .gitignore  README.md  action.yml  pyproject.toml
.github/scripts/: post_comment.py
.github/workflows/: release.yml
demo/: repos.txt  sample_benchmark_report.html  sample_pr_comment.md  sample_report.html  sample_report.json
skillguard/: app.py
skillguard/analysis/: __init__.py  behavior_analyzer.py  claim_extractor.py  context_analyzer.py  models.py  project_profiler.py  trust_evaluator.py
skillguard/analysis/llm_providers/: __init__.py  base_provider.py  gemini_provider.py  ollama_provider.py  openai_provider.py
skillguard/analyzers/: __init__.py  base.py  dependency_analyzer.py  dockerfile_analyzer.py  github_actions_analyzer.py  network_destination_analyzer.py  secret_analyzer.py
skillguard/core/: __init__.py  constants.py  github_scanner.py  repo_loader.py  repository_discovery.py  scoring.py  trust_score.py
skillguard/models/: __init__.py  finding.py  report.py  risk.py
skillguard/reports/: __init__.py  benchmark_report.py  html_report.py  json_report.py
skillguard/scanners/: __init__.py  command_detector.py  dart_scanner.py  file_detector.py  javascript_scanner.py  network_detector.py  python_scanner.py  secret_detector.py  typescript_scanner.py
tests/: test_ai_analysis.py  test_analysis.py  test_app.py  test_benchmark.py  test_capability_model.py  test_dart_scanner.py  test_detectors.py  test_discovery.py  test_flutter_detection.py  test_fp_reduction.py  test_github_scanner.py  test_html_report.py  test_repository_isolation.py  test_scoring.py  test_supply_chain.py  test_trust_score.py
