[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "skillguard"
version = "0.1.0"
description = "Trust but Verify for AI Agent Skills, MCP Servers, and Plugins."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "pydantic>=2.7.0",
    "gitpython>=3.1.43",
]

[project.scripts]
skillguard = "skillguard.app:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
